@startuml
class Vertebrate {
def __init__(): \n     super().__init__()
}
class Mammal {
def __init__(): \n     super().__init__()
}
class Bird {
def __init__(): \n     super().__init__()
}
class Platypus {
def __init__(): \n     super().__init__()
}
Vertebrate <|-- Mammal
Vertebrate <|-- Bird
Bird <|-- Platypus
Mammal <|-- Platypus

@enduml